simple-deployment/47-namespace.tf
resource "kubernetes_namespace" "namespace" {
  count = var.create_namespace ? 1 : 0

  metadata {
    name = var.namespace

    labels = {
      istio-injection = "disabled"
    }
  }
}
